name:                tab-tree-haskell
version:             0.1.0
synopsis:
homepage:            https://github.com/terminus-community/tab-tree-haskell
license:             BSD3
license-file:        LICENSE
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2020 Murat Kasimov
category:            Data, Control
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/terminus-community/tab-tree-haskell.git

library
  exposed-modules:
  build-depends: base == 4.*
  default-language: Haskell2010
  ghc-options: -fno-warn-tabs
  default-extensions:
    ConstraintKinds
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    LiberalTypeSynonyms
    MultiParamTypeClasses
    PackageImports
    RankNTypes
    TupleSections
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    QuantifiedConstraints
    UndecidableInstances

executable tab-tree-parser-example
  main-is: Main.hs
  build-depends: base
  default-extensions:
    ConstraintKinds
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    LiberalTypeSynonyms
    MultiParamTypeClasses
    PackageImports
    RankNTypes
    TupleSections
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    QuantifiedConstraints
    UndecidableInstances
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs
